--- a/preprocessing_and_eda.ipynb
+++ b/preprocessing_and_eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +166,19 @@
     "    \n",
     "    return Image.fromarray(result), mask_type\n",
     "\n",
+    "def apply_mask_dir2(image_path, mask_path):\n",
+    "    \"\"\"Apply mask to image without type detection\"\"\"\n",
+    "    image = Image.open(image_path).convert('RGBA')\n",
+    "    mask = Image.open(mask_path).convert('L')\n",
+    "    \n",
+    "    image_array = np.array(image)\n",
+    "    mask_array = np.array(mask)\n",
+    "    \n",
+    "    result = np.zeros_like(image_array)\n",
+    "    result[mask_array == 255] = image_array[mask_array == 255]\n",
+    "    \n",
+    "    return Image.fromarray(result)\n",
+    "\n",
     "def process_folder_dir1(folder_path):\n",
     "    \"\"\"Process folder from first directory (archive/similar/inpainting)\"\"\"\n",
     "    folder_name = os.path.basename(folder_path)\n",
@@ -198,31 +211,32 @@
     "    original_file = os.path.join(folder_path, 'original.png')\n",
     "    \n",
     "    mask_types = {\n",
-    "        'random_patch': ('mask_random_patch.png', 'inpainting_random_patch.png'),\n",
-    "        'top_left': ('mask_top_left_black.png', 'inpainting_top_left_black.png'),\n",
-    "        'top_right': ('mask_top_right_black.png', 'inpainting_top_right_black.png')\n",
+    "        'mask_random_patch.png': ('random', 'inpainting_random_patch.png'),\n",
+    "        'mask_top_left_white.png': ('diagonal_top_left', 'inpainting_top_left_white.png'),\n",
+    "        'mask_top_left_black.png': ('diagonal_bottom_right', 'inpainting_top_left_black.png'),\n",
+    "        'mask_top_right_white.png': ('diagonal_top_right', 'inpainting_top_right_white.png'),\n",
+    "        'mask_top_right_black.png': ('diagonal_bottom_left', 'inpainting_top_right_black.png')\n",
     "    }\n",
     "    \n",
     "    processed = []\n",
     "    if os.path.exists(original_file):\n",
-    "        for mask_type, (mask_filename, inpainting_filename) in mask_types.items():\n",
+    "        for mask_filename, (mask_type, inpainting_filename) in mask_types.items():\n",
     "            mask_file = os.path.join(folder_path, mask_filename)\n",
     "            inpainting_file = os.path.join(folder_path, inpainting_filename)\n",
     "            \n",
     "            if all(os.path.exists(f) for f in [mask_file, inpainting_file]):\n",
     "                try:\n",
-    "                    # Apply mask and get detected type\n",
-    "                    masked_original, detected_type = apply_mask(original_file, mask_file)\n",
-    "                    masked_inpainting, _ = apply_mask(inpainting_file, mask_file)\n",
+    "                    # Apply mask without type detection\n",
+    "                    masked_original = apply_mask_dir2(original_file, mask_file)\n",
+    "                    masked_inpainting = apply_mask_dir2(inpainting_file, mask_file)\n",
     "                    \n",
-    "                    # Use detected type for consistent naming\n",
-    "                    original_filename = f'{detected_type}_dir2_{mask_type}_original_{folder_name}.png'\n",
-    "                    inpainting_filename = f'{detected_type}_dir2_{mask_type}_inpainting_{folder_name}.png'\n",
+    "                    original_filename = f'{mask_type}_dir2_original_{folder_name}.png'\n",
+    "                    inpainting_filename = f'{mask_type}_dir2_inpainting_{folder_name}.png'\n",
     "                    \n",
     "                    masked_original.save(os.path.join(original_dest, original_filename))\n",
     "                    masked_inpainting.save(os.path.join(inpainting_dest, inpainting_filename))\n",
     "                    \n",
-    "                    processed.append((True, detected_type))\n",
+    "                    processed.append((True, mask_type))\n",
     "                except Exception as e:\n",
     "                    print(f\"Error processing {mask_type} in folder {folder_name} from dir2: {str(e)}\")\n",
     "                    processed.append((False, None))\n",
@@ -232,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5063/5063 [03:22<00:00, 25.00it/s]\n"
+      "100%|██████████| 5063/5063 [03:18<00:00, 25.45it/s]\n"
      ]
     },
     {
@@ -260,7 +274,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1650/1650 [03:22<00:00,  8.15it/s]"
+      "100%|██████████| 1650/1650 [05:18<00:00,  5.18it/s]"
      ]
     },
     {
@@ -268,18 +282,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Processed 10013 total images\n",
+      "Processed 13313 total images\n",
       "\n",
       "Mask type distribution:\n",
-      "top: 384 images (3.8%)\n",
-      "bottom: 670 images (6.7%)\n",
-      "left: 232 images (2.3%)\n",
-      "right: 215 images (2.1%)\n",
-      "diagonal_top_left: 592 images (5.9%)\n",
-      "diagonal_top_right: 548 images (5.5%)\n",
-      "diagonal_bottom_left: 2354 images (23.5%)\n",
-      "diagonal_bottom_right: 2365 images (23.6%)\n",
-      "random: 2653 images (26.5%)\n"
+      "top: 384 images (2.9%)\n",
+      "bottom: 669 images (5.0%)\n",
+      "left: 232 images (1.7%)\n",
+      "right: 215 images (1.6%)\n",
+      "diagonal_top_left: 2242 images (16.8%)\n",
+      "diagonal_top_right: 2198 images (16.5%)\n",
+      "diagonal_bottom_left: 2354 images (17.7%)\n",
+      "diagonal_bottom_right: 2362 images (17.7%)\n",
+      "random: 2657 images (20.0%)\n"
      ]
     },
     {
