--- a/CNN_deepfakeDetect_SVM.ipynb
+++ b/CNN_deepfakeDetect_SVM.ipynb
@@ -9568,7 +9568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "CNNtrain",
    "language": "python",
    "name": "python3"
   },
@@ -9582,12 +9582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
