--- a/CNN_training.ipynb
+++ b/CNN_training.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,11 +308,11 @@
     "    # Dense layers\n",
     "    x = Dense(256, activation='relu', kernel_regularizer=l2(1e-4))(x)\n",
     "    x = BatchNormalization()(x)\n",
-    "    x = Dropout(0.5)(x)\n",
+    "    x = Dropout(0.4)(x)\n",
     "    \n",
     "    x = Dense(128, activation='relu', kernel_regularizer=l2(1e-4))(x)\n",
     "    x = BatchNormalization()(x)\n",
-    "    x = Dropout(0.6)(x)\n",
+    "    x = Dropout(0.4)(x)\n",
     "    \n",
     "    # Final layer\n",
     "    outputs = Dense(1, activation='sigmoid')(x)\n",
@@ -336,7 +336,7 @@
     "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "\n",
-    "model.compile(loss='binary_crossentropy', optimizer=Adam(learning_rate=0.00025), metrics=['accuracy'])\n",
+    "model.compile(loss='binary_crossentropy', optimizer=Adam(learning_rate=0.0001), metrics=['accuracy', 'AUC'])\n",
     "# train_gen = ImageDataGenerator(  preprocessing_function=lambda x: x / 255.0  # Normalize pixel values\n",
     "# )\n",
     "\n",
@@ -366,13 +366,13 @@
     "        yield batch_features, batch_labels\n",
     "\n",
     "# Create generators\n",
-    "train_generator = custom_generator(train_paths, train_labels, batch_size=32, gen=train_gen, is_training=True, target_size=(256, 256))\n",
-    "test_generator = custom_generator(test_paths, test_labels, batch_size=32, gen=test_gen, is_training=False, target_size=(256, 256))"
+    "train_generator = custom_generator(train_paths, train_labels, batch_size=16, gen=train_gen, is_training=True, target_size=(256, 256))\n",
+    "test_generator = custom_generator(test_paths, test_labels, batch_size=16, gen=test_gen, is_training=False, target_size=(256, 256))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -393,8 +393,8 @@
    ],
    "source": [
     "# Test the custom generator\n",
-    "train_generator = custom_generator(train_paths, train_labels, batch_size=32, gen=train_gen, is_training=True, target_size=(256, 256))\n",
-    "test_generator = custom_generator(test_paths, test_labels, batch_size=32, gen=test_gen, is_training=False, target_size=(256, 256))\n",
+    "train_generator = custom_generator(train_paths, train_labels, batch_size=16, gen=train_gen, is_training=True, target_size=(256, 256))\n",
+    "test_generator = custom_generator(test_paths, test_labels, batch_size=16, gen=test_gen, is_training=False, target_size=(256, 256))\n",
     "\n",
     "# Check a batch from each generator\n",
     "train_batch_x, train_batch_y = next(train_generator)\n",
